# vision-goblin

./: .gitignore  AGENTS.md  Cdevgoblinvision-goblintmp_models.json  README.md  capture-overlay.html  index.html  package-lock.json  package.json  plan.md  vite.config.ts  vitest.config.e2e.ts  vitest.config.ts
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
backlog/: README.md  epic-f131-global-screen-snipping.md  epic-f132-global-color-picker.md  epic-f133-goblin-tone-and-delight.md  epic-f201-branching-history.md  epic-f420-ai-text-cleanup-and-ocr-replace.md  epic-f420-natural-language-and-automation.md  epic-f430-ai-relight.md  epic-f440-ai-reflection-and-glare-removal.md  epic-f440-preset-and-scaled-workflows.md  epic-f450-ai-smart-recolor.md  epic-f460-text-capabilities-overhaul.md  epic-f470-ai-job-inspection-debug.md  epic-f470-assistive-surfaces.md  epic-f510-long-term-editing-platform.md  epic-p001-large-image-handling.md  epic-p002-core-editing-polish.md  epic-p003-fill-and-gradient-tools.md  epic-p004-gemini-and-model-discovery.md  epic-p005-ai-healing.md  epic-r001-cross-cutting-product-requirements.md  index-active.md  index-done.md  index-follow-up.md  index-future.md
backlog/done/: epic-d001-core-app-and-workspace.md  epic-d002-editing-and-layers.md  (+26 more)
public/: countdown.html
src/: logger.test.ts  logger.ts  main.ts  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  debug_log.rs  lib.rs  main.rs
src/app/: dom.ts  (+46 more)
(+138 files in other folders)
